[gd_scene load_steps=7 format=2]

[ext_resource path="res://stages/assets/boss_door.gd" type="Script" id=1]
[ext_resource path="res://stages/assets/sprites/BossDoor.png" type="Texture" id=2]
[ext_resource path="res://stages/assets/sounds/Shutter.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "open_close"
length = 0.37
step = 0.09
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.18, 0.27, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 32 )

[node name="BossDoor01" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/open_close = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 130

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="on_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="on_section_entered"]
[connection signal="body_entered" from="Area2D" to="." method="on_entered"]
[connection signal="body_exited" from="Area2D" to="." method="on_exited"]
